--- a/web/voting.html
+++ b/web/voting.html
@@ -29,13 +29,12 @@
 						<h2><input type=button id=add value="Add" style="height:60px;width:400px "></h2>
 					</div>
 					<form id=vote>	
-						<div class="inner">
-								投票主題:	<center><input type=text id=title_na name=title_na style="height:40px;width:400px"></center><br />
-								投票選項1:<center><input type=text id=title_op1 name=option1 style="height:40px;width:400px"></center>
-								投票選項2:<center><input type=text id=title_op2 name=option2 style="height:40px;width:400px"></center>
-								投票選項3:<center><input type=text id=title_op3 name=option3 style="height:40px;width:400px"></center>
-								投票選項4:<center><input type=text id=title_op4 name=option4 style="height:40px;width:400px"></center><br />
-								&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+						<div class="inner" align=center>
+								投票主題:	<input type=text id=title_na name=title_na style="height:40px;width:400px"><br />
+								投票選項1:<input type=text id=title_op1 name=option1 style="height:40px;width:400px">
+								投票選項2:<input type=text id=title_op2 name=option2 style="height:40px;width:400px">
+								投票選項3:<input type=text id=title_op3 name=option3 style="height:40px;width:400px">
+								投票選項4:<input type=text id=title_op4 name=option4 style="height:40px;width:400px"><br />
 								<input type=button id=send value=送出>&emsp;&emsp;<input type=reset value=清除>
 						</div>
 					</form>
