--- a/web/test2.html
+++ b/web/test2.html
@@ -1,133 +1,81 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="assets/css/main.css" />
+    <head>
+        <title>講師頁  LINE-HACK</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="icon" href="images/logo.ico" type="image/x-icon" />
+    </head>
+    <body class="subpage">
+        <!-- Header -->
+            <header id="header">
+                <h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
+                    <form style="display:inline; position:relative; right:400px;"" action="" method="POST">
+                            <input style="width:300px; display:inline;" id="message" name="name" type="text" placeholder="請輸入要發送至 Line Bot 的訊息">
+                            <input id=sent_image name="image" type="File">
+                            <input id=comet type="button" value="送出" /><font color=red><span id=box></span></font>
+                    </form>
+                <a href="#menu">選單</a>
+            </header>
+        <!-- Nav -->
+            <nav id="menu">
+                <ul class="links">
+                    <img src="images/2.jpg" width="230" alt="">
+                    <li><a href="speech.html">講師頁</a></li>
+                    <li><a href="audience.html">觀眾頁</a></li>
+                    <li><a href="voting.html">投票頁</a></li>
+                </ul>
+            </nav>
+        <!-- One -->
+            <section class="wrapper style1">
+                <div class="inner">
+                    <header class="align-center">
+                        <h2><span id=title></span></h2>
+                        <p><span id=title2></span></p>
+                        <a href="#two" class="button big alt scrolly">繼續</a>
+                    </header>
+                </div>
+            </section>
+        <!-- Two -->
+            <section class="wrapper style3">
+                <div id="two" class="inner">
+                    <header class="align-center">
+                        <h2>白板與簡報區</h2>
+                        <p>可將文件上傳至此並可以運用白板進行更有效的講解</p>
+                    </header>
+                    <div class="flex flex-12">
+                        <iframe width="35%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+                        <iframe id=iframe_slide width="65%" height="700px" src="" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                    </div>
+                </div>
+            </section>
+        <!-- Scripts -->
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/jquery.scrolly.min.js"></script>
+            <script src="assets/js/skel.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/main.js"></script>
+            <script src="assets/js/jquery.cookie.js"></script>
+            <!-- <script src="assets/js/test2.js"></script> -->
+            <script src="assets/js/speech.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function(){
+                      var meet_name=$.cookie("MeetName");
+                      var sent_id=$.cookie("SentId");
+                      var slide_link=$.cookie("SlideLink");
+                      var invite_id=$.cookie("InviteId");
+                      var slide_key=$.cookie("SlideKey");
 
+                      console.log(meet_name);
+                      console.log(sent_id);
+                      console.log(slide_link);
+                      console.log(invite_id);
+                      console.log(slide_key);
 
-<style>
-    #mwt_mwt_slider_scroll{
-        position:fixed;
-        bottom:30px;
-        left:-360px;
-        width:360px;
-        z-index:9999;
-    }
-    #mwt_fb_tab{
-        position:absolute;
-        right:-120px;
-    }
-</style>
-
-<style type="text/css">
-/* The Modal (background) */
-.functionmodal {
-display: none;
-/* Hidden by default */
-position: fixed;
-/* Stay in place */
-z-index: 1;
-/* Sit on top */
-left: 0;
-top: 0;
-width: 100%;
-/* Full width */
-height: 100%;
-/* Full height */
-overflow: auto;
-/* Enable scroll if needed */
-background-color: rgb(0, 0, 0);
-/* Fallback color */
-background-color: rgba(0, 0, 0, 0.4);
-}
-/* Modal Content/Box */
-.functionmodal-content {
-background-color: #fefefe;
-margin: 15% auto;
-/* 15% from the top and centered */
-padding: 20px;
-border: 1px solid #888;
-width: 80%;
-/* Could be more or less, depending on screen size */
-}
-.close {
-color: #aaa;
-float: right;
-font-size: 28px;
-font-weight: bold;
-}
-.close:hover,
-.close:focus {
-color: black;
-text-decoration: none;
-cursor: pointer;
-}
-</style>
-
-</head>
-<body>
-
-<section id="banner" data-video="images/banner">
-</section>
-
-<div id="mwt_mwt_slider_scroll">
-    <div id="mwt_fb_tab">
-        <a class="button big alt scrolly">功能</a>
-    </div>
-    <div id="mwt_slider_content">
-        <a id="myBtn1" class="button big alt scrolly">發送訊息</a>
-        <a id="myBtn2" class="button big alt scrolly">發送圖片</a>
-
-
-        <div id="myModal" class="functionmodal">
-            <!-- Modal content -->
-            <div class="functionmodal-content">
-                <input type="text" name="name" id="message" value="" placeholder="Message" />
-                <input id=send1 type="button" value="送出" /><font color=red><span id=box class="close"></span></font>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<script type='text/javascript' src='https://code.jquery.com/jquery-1.9.1.min.js'></script>
-<script type='text/javascript'>
-    $(function(){
-        var w = $("#mwt_slider_content").width();
-        $('#mwt_slider_content').css('height', ($(window).height() -867) + 'px' ); //將區塊自動撐滿畫面高度
-        $("#mwt_fb_tab").mouseover(function(){ //滑鼠滑入時
-            if ($("#mwt_mwt_slider_scroll").css('left') == '-'+w+'px'){
-                $("#mwt_mwt_slider_scroll").animate({ left:'0px' }, 600 ,'swing');
-            }
-        });
-            $("#mwt_slider_content").mouseleave(function(){　//滑鼠離開後
-            $("#mwt_mwt_slider_scroll").animate( { left:'-'+w+'px' }, 600 ,'swing');
-        });
-    });
-</script>
-
-<script type="text/javascript">
-var functionmodal = document.getElementById('myModal');
-var btn1 = document.getElementById("myBtn1");
-var btn2 = document.getElementById("myBtn2");
-var span = document.getElementsByClassName("close")[0];
-btn1.onclick = function () {
-    functionmodal.style.display = "block";
-}
-btn2.onclick = function () {
-    functionmodal.style.display = "block";
-}
-span.onclick = function () {
-    functionmodal.style.display = "none";
-}
-window.onclick = function (event) {
-if (event.target == functionmodal) {
-    functionmodal.style.display = "none";
-}
-}
-</script>
-
-
-</body>
+                      document.getElementById("iframe_slide").src="https://www.slideshare.net/slideshow/embed_code/key/"+slide_key;
+                      $(WebId).text(invite_id);
+                  });
+            </script>
+    </body>
 </html>
