網路白板測試

--- a/web/aww_test.html
+++ b/web/aww_test.html
@@ -3,7 +3,8 @@
     <!-- Element in which the whiteboard will be shown
               – modify style as needed -->
     </div>
-    <script src="https://awwapp.com/static/widget/js/aww3.min.js">
+    <!-- <script src="https://awwapp.com/static/widget/js/aww3.min.js"> -->
+    <script src="assets/js/aww3.min.js"></script>
     </script>
     <script type="text/javascript">
         var aww = new AwwBoard('#aww-wrapper', {
