將所有功能整理完畢

--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,8 @@
 			<div id=verify class="align-center">	
 				<h3>請輸入演講名稱</h3>
 				<center><input type=text id=MeetName name=MeetName style="height:40px;width:400px"></center><br />
+				<h3>請輸入演講細節</h3>
+				<center><input type=text id=MeetDetail name=MeetDetail style="height:40px;width:400px"></center><br />
 				<h3>請輸入驗證碼</h3>
 				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br />
 				<h3>請輸入簡報網頁</h3>
