--- a/web/test.html
+++ b/web/test.html
@@ -124,7 +124,7 @@ cursor: pointer;
 
 <div id="mwt_mwt_slider_scroll">
     <div id="mwt_fb_tab">
-        <button style="width:120px; height: 60px; color: red";">功能</button>
+        <button style="width:120px; height: 60px; color: red;">功能</button>
     </div>
     <div id="mwt_slider_content">
         <button id="myBtn1" style="width:120px; height: 60px;">發送訊息</button>
@@ -197,7 +197,7 @@ if (event.target == modal) {
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/jquery.cookie.js"></script>
-			<!-- <script src="assets/js/test2.js"></script> -->
+			<!-- <script src="assets/js/abort_test2.js"></script> -->
 			<script src="assets/js/speech.js"></script>
 			<script type="text/javascript">
 				$(document).ready(function(){
