--- a/web/test2.html
+++ b/web/test2.html
@@ -11,7 +11,7 @@
         <!-- Header -->
             <header id="header">
                 <h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-                    <form style="display:inline; position:relative; right:400px;"" action="" method="POST">
+                    <form style="display:inline; position:relative; right:400px;" action="" method="POST">
                             <input style="width:300px; display:inline;" id="message" name="name" type="text" placeholder="請輸入要發送至 Line Bot 的訊息">
                             <input id=sent_image name="image" type="File">
                             <input id=comet type="button" value="送出" /><font color=red><span id=box></span></font>
@@ -57,7 +57,7 @@
             <script src="assets/js/util.js"></script>
             <script src="assets/js/main.js"></script>
             <script src="assets/js/jquery.cookie.js"></script>
-            <!-- <script src="assets/js/test2.js"></script> -->
+            <!-- <script src="assets/js/abort_test2.js"></script> -->
             <script src="assets/js/speech.js"></script>
             <script type="text/javascript">
                 $(document).ready(function(){
