--- a/web/voting.html
+++ b/web/voting.html
@@ -11,17 +11,17 @@
 		<!-- Header -->
 			<header id="header">
 				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-                    <form style="display:inline; position:relative; right:400px;"" action="" method="POST">
-                            <input style="width:300px; display:inline;" id="message" name="name" type="text" placeholder="請輸入要發送至 Line Bot 的訊息">
-                            <input id=sent_image name="image" type="File">
-                            <input id=comet type="button" value="送出" /><font color=red><span id=box></span></font>
+                    <form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
+                            <input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
+                            <input id=image name="image" type="File" onclick="clear()">
+                            <input id=sent_button type="button" value="送出" onclick="say_something()" /><font color=red><span id=box></span></font>
                     </form>
 				<a href="#menu">選單</a>
 			</header>
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<img src="images/4.jpg" width="230" alt=""> 
+					<img src="images/logo.png" width="230" alt=""> 
 					<li><a href="speech.html">講師頁</a></li>
 					<li><a href="audience.html">觀眾頁</a></li>
 					<li><a href="voting.html">投票頁</a></li>
@@ -58,7 +58,8 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/jquery.cookie.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/test.js"></script>
+			<script src="assets/js/voting.js"></script>
+			<script src="assets/js/lib.js"></script>
 			<script type="text/javascript">
 				$(document).ready(function(){
 					  var meet_name=$.cookie("MeetName");
