圖片置中再一次

--- a/web/audience.html
+++ b/web/audience.html
@@ -24,7 +24,7 @@ text-align: center;
                     <form style="display:inline; position:relative; right:400px;"" action="" method="POST">
                             <input style="width:300px; display:inline;" id="message" name="name" type="text" placeholder="請輸入要發送至 Line Bot 的訊息">
                             <input id=sent_image name="image" type="File">
-                            <input id=comet type="button" value="送出" /><font color=red><span id=box></span></font>
+                            <input id=comet type="button" value="送出" style="background: gray" /><font color=red><span id=box></span></font>
                     </form>
 				<a href="#menu">選單</a>
 			</header>
