--- a/web/audience.html
+++ b/web/audience.html
@@ -22,17 +22,10 @@ text-align: center;
 		<!-- Header -->
 			<header id="header">
 				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-<<<<<<< HEAD
                     <form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
                             <input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
                             <input id=image name="image" type="File" onclick="clear()">
-                            <input id=sent_button type="button" value="送出" onclick="say_something()" /><font color=red><span id=box></span></font>
-=======
-                    <form style="display:inline; position:relative; right:400px;"" action="" method="POST">
-                            <input style="width:300px; display:inline;" id="message" name="name" type="text" placeholder="請輸入要發送至 Line Bot 的訊息">
-                            <input id=sent_image name="image" type="File">
-                            <input id=comet type="button" value="送出" style="background: gray" /><font color=red><span id=box></span></font>
->>>>>>> 8000a197a7be6d9bd43fc4f99d7a9d2dd82e332b
+                            <input id=sent_button type="button" value="送出" onclick="say_something()" style="background: gray"/><font color=red><span id=box></span></font>
                     </form>
 				<a href="#menu">選單</a>
 			</header>
@@ -48,15 +41,9 @@ text-align: center;
 		<!-- One -->
 			<section class="wrapper style1">
 				<div id="one" class="inner">
-<<<<<<< HEAD
-					<div class="flex flex-12">
-						<iframe id=AwwLink width="35%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
-						<img id="change_image" src="images/image.jpg" width="65%" height="700px">
-=======
 					<div class="flex-container">
-						<iframe style="flex-grow: 2" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+						<iframe id=AwwLink style="flex-grow: 2" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
 						<div style="flex-grow: 8"><img id="change_image" src="images/lunch.jpg"  height="700px"></div>
->>>>>>> 8000a197a7be6d9bd43fc4f99d7a9d2dd82e332b
 					</div>
 				</div>
 			</section>
