index網頁功能更新

--- a/web/index.html
+++ b/web/index.html
@@ -6,29 +6,45 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/logo.ico" type="image/x-icon" />
+		<style type="text/css">
+			.w3-modal{display:none;	/*padding-top:100px;*/}
+		</style>
 	</head>
 	<body>
 		<!-- Main -->
-			<br /><br /><br /><br /><br /><br /><br /><br />
-			<div id=verify class="align-center">	
-				<h3>請輸入演講名稱</h3>
+		<br /><br /><br /><br />
+		<div id=verify class="align-center">	
+			<h3>請輸入演講名稱</h3>
 				<center><input type=text id=MeetName name=MeetName style="height:40px;width:400px"></center><br />
-				<h3>請輸入演講細節</h3>
+			<h3>請輸入演講細節</h3>
 				<center><input type=text id=MeetDetail name=MeetDetail style="height:40px;width:400px"></center><br />
-				<h3>請輸入驗證碼</h3>
-				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br />
-				<h3>請輸入簡報網頁</h3>
-				<center><input type=text id=SlideLink name=SlideLink style="height:40px;width:400px"></center><br />
-				<input type=button id=sent onclick='sent_id()' value=送出>
-			</div>
+			<h3>請輸入驗證碼</h3>
+				<center><input type=text id=SentId name=SentId style="height:40px;width:400px"></center><br /><br />
+			<button style="position:relative; right:-122px;" class="button big alt scrolly" onclick="document.getElementById('id01').style.display='block'">請輸入簡報網頁</button>
+			<button style="position:relative; right:-122px;" class="button big alt scrolly">請上傳簡報檔案</button>
+				<form id="image_data" method="post" style="display:inline;">
+					<input id=sent_image name="image" type="File" class="button big alt scrolly" style="position:relative; right:117px; top:0px; width: 236px; opacity: 0;">
+				</form><br />
+				<div id="id01" class="w3-modal">
+					<br /><center><input type=text id=SlideLink name=SlideLink style="height:40px;width:400px" class="center"></center>
+				</div><br />
+			<input type=button id=sent onclick='sent_id()' value=送出>
+		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/index.js"></script>
-			<script src="assets/js/jquery.cookie.js"></script>
-			
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/index.js"></script>
+		<script src="assets/js/jquery.cookie.js"></script>
+		<script>
+			var modala = document.getElementById('id01');
+			window.onclick = function(event) {
+				if (event.target == modala) {
+					modala.style.display = "none";
+				}
+			}
+		</script>
 	</body>
 </html>
