--- a/web/audience.html
+++ b/web/audience.html
@@ -6,70 +6,57 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/logo.ico" type="image/x-icon" />
-<style>
-.flex-container {
-display: flex;
-}
-
-.flex-container > div {
-width: 100px;
-text-align: center;
-}
-</style>
+		<style>
+			.flex-container {display: flex;}
+			.flex-container > div {width: 100px;	text-align: center;}
+		</style>
 	</head>
 	<body class="subpage">
-		<input id=change type="button" value="送出" onclick="test()" />
 		<!-- Header -->
-			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-                    <form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
-                            <input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
-                            <input id=image name="image" type="File" onclick="clear()">
-                            <input id=sent_button type="button" value="送出" onclick="say_something()" style="background: gray"/><font color=red><span id=box></span></font>
-                    </form>
-				<a href="#menu">選單</a>
-			</header>
+		<header id="header">
+			<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
+			<form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
+				<input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
+				<input id=image name="image" type="File" onclick="clear()">
+				<input id=sent_button type="button" value="送出" style="background: gray" onclick="say_something()" /><font color=red><span id=box></span></font>
+			</form>
+			<a href="#menu">選單</a>
+		</header>
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<img src="images/logo.png" width="230" alt="">
-					<li><a href="speech.html">講師頁</a></li>
-					<li><a href="audience.html">觀眾頁</a></li>
-					<li><a href="voting.html">投票頁</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<img src="images/logo.png" width="230" alt="">
+				<li><a href="speech.html">講師頁</a></li>
+				<li><a href="audience.html">觀眾頁</a></li>
+				<li><a href="voting.html">投票頁</a></li>
+			</ul>
+		</nav>
 		<!-- One -->
-			<section class="wrapper style1">
-				<div id="one" class="inner">
-					<div class="flex-container">
-						<iframe id=AwwLink style="flex-grow: 2" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
-						<div style="flex-grow: 8"><img id="change_image" src="images/lunch.jpg"  height="700px"></div>
-					</div>
+		<section class="wrapper style1">
+			<div id="one" class="inner">
+				<div class="flex-container">
+					<iframe id=AwwLink style="flex-grow: 2" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+					<div style="flex-grow: 8"><img id="change_image" src="images/image.jpg"  height="700px"></div>
 				</div>
-			</section>
+			</div>
+		</section>
 		<!-- Two -->
-			<section id="two" class="wrapper style3">
-				<div class="inner">
-					<ul>
-						<h4 align=center><input type=button id=title1 value="觀眾詢問清單"  style="height:75px;width:1368px"></h4>
-						<form id=aaa1><ul class=contect><div id="p1" class="table-wrapper"></div></ul></form>
-					</ul>
-				</div>
-			</section>
-
+		<section id="two" class="wrapper style3">
+			<div class="inner">
+				<ul>
+					<h4 align=center><input type=button id=title1 value="觀眾詢問清單"  style="height:75px;width:1368px"></h4>
+					<form id=aaa1><ul class=contect><div id="p1" class="table-wrapper"></div></ul></form>
+				</ul>
+			</div>
+		</section>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/audience.js"></script>
-			<script src="assets/js/jquery.cookie.js"></script>
-			<script src="assets/js/lib.js"></script>
-			<!-- <script type="text/javascript">
-			button.addEventListener('click', function(e) {
-				console.log(e.target.id);
-			});
-		</script> -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/audience.js"></script>
+		<script src="assets/js/jquery.cookie.js"></script>
+		<script src="assets/js/lib.js"></script>
 	</body>
 </html>
