--- a/web/speech.html
+++ b/web/speech.html
@@ -9,56 +9,55 @@
 	</head>
 	<body class="subpage">
 		<!-- Header -->
-			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-                    <form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
-                            <input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
-                            <input id=image name="image" type="File" onclick="clear()">
-                            <input id=sent_button type="button" value="送出" onclick="say_something()" /><font color=red><span id=box></span></font>
-                    </form>
-				<a href="#menu">選單</a>
-			</header>
+		<header id="header">
+			<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
+			<form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
+				<input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
+				<input id=image name="image" type="File" onclick="clear()">
+				<input id=sent_button type="button" value="送出" style="background: gray" onclick="say_something()" /><font color=red><span id=box></span></font>
+			</form>
+			<a href="#menu">選單</a>
+		</header>
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<img src="images/logo.png" width="230" alt="">
-					<li><a href="speech.html">講師頁</a></li>
-					<li><a href="audience.html">觀眾頁</a></li>
-					<li><a href="voting.html">投票頁</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<img src="images/logo.png" width="230" alt="">
+				<li><a href="speech.html">講師頁</a></li>
+				<li><a href="audience.html">觀眾頁</a></li>
+				<li><a href="voting.html">投票頁</a></li>
+			</ul>
+		</nav>
 		<!-- One -->
-			<section class="wrapper style1">
-				<div class="inner">
-					<header class="align-center">
-						<h2><span id=title></span></h2>
-						<p><span id=title2></span></p>
-						<a href="#two" class="button big alt scrolly">繼續</a>
-					</header>
-				</div>
-			</section>
+		<section class="wrapper style1">
+			<div class="inner">
+			<header class="align-center">
+				<h2><span id=title></span></h2>
+				<p><span id=title2></span></p>
+				<a href="#two" class="button big alt scrolly">繼續</a>
+			</header>
+			</div>
+		</section>
 		<!-- Two -->
-			<section class="wrapper style3">
-				<div id="two" class="inner">
-					<header class="align-center">
-						<h2>白板與簡報區</h2>
-						<p>可將文件上傳至此並可以運用白板進行更有效的講解</p>
-					</header>
-					<div class="flex flex-12">
-						<iframe id=AwwLink width="35%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
-						<iframe id=IframeSlide width="65%" height="700px" src="" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
-					</div>
+		<section class="wrapper style3">
+			<div id="two" class="inner">
+				<header class="align-center">
+					<h2>白板與簡報區</h2>
+					<p>可將文件上傳至此並可以運用白板進行更有效的講解</p>
+				</header>
+				<div class="flex flex-12">
+					<iframe id=AwwLink width="35%" height="700px" src="https://awwapp.com/b/uzq1ztx9o/"></iframe>
+					<iframe id=IframeSlide width="65%" height="700px" src="" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 				</div>
-			</section>
+			</div>
+		</section>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/jquery.cookie.js"></script>
-			<script src="assets/js/lib.js"></script>
-			<!-- <script src="assets/js/abort_test2.js"></script> -->
-			<script src="assets/js/speech.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.cookie.js"></script>
+		<script src="assets/js/lib.js"></script>
+		<script src="assets/js/speech.js"></script>
 	</body>
 </html>
