--- a/web/voting.html
+++ b/web/voting.html
@@ -9,73 +9,72 @@
 	</head>
 	<body class="subpage">
 		<!-- Header -->
-			<header id="header">
-				<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
-                    <form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
-                            <input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
-                            <input id=image name="image" type="File" onclick="clear()">
-                            <input id=sent_button type="button" value="送出" onclick="say_something()" /><font color=red><span id=box></span></font>
-                    </form>
-				<a href="#menu">選單</a>
-			</header>
+		<header id="header">
+			<h1><a href="#">演講者平台<a>&emsp;&emsp;LINE BOT ID:@etx7735c&emsp;&emsp;邀請碼:<a id="WebId"></a></a></a></h1>
+			<form id="SaySomething" style="display:inline; position:relative; right:400px;" method="POST">
+				<input style="width:300px; display:inline;" id="say" name="say" type="text" placeholder="請輸入要發送至觀眾的訊息/圖片" onclick="clear()">
+				<input id=image name="image" type="File" onclick="clear()">
+				<input id=sent_button type="button" value="送出" style="background: gray" onclick="say_something()" /><font color=red><span id=box></span></font>
+			</form>
+			<a href="#menu">選單</a>
+		</header>
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<img src="images/logo.png" width="230" alt=""> 
-					<li><a href="speech.html">講師頁</a></li>
-					<li><a href="audience.html">觀眾頁</a></li>
-					<li><a href="voting.html">投票頁</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<img src="images/logo.png" width="230" alt=""> 
+				<li><a href="speech.html">講師頁</a></li>
+				<li><a href="audience.html">觀眾頁</a></li>
+				<li><a href="voting.html">投票頁</a></li>
+			</ul>
+		</nav>
 		<!-- Main -->
-			<div id="main">
-				<section id="vote_tite" class="wrapper style1">	
-					<div class="inner" id=vote_add align=center>
-						<h2><input type=button id=add value="Add" style="height:60px;width:400px "></h2>
-					</div>
-					<form id=vote>	
-						<div class="inner" align=center>
-								投票主題:	<input type=text id=title_na name=title_na style="height:40px;width:400px"><br />
-								投票選項1:<input type=text id=title_op1 name=option1 style="height:40px;width:400px">
-								投票選項2:<input type=text id=title_op2 name=option2 style="height:40px;width:400px">
-								投票選項3:<input type=text id=title_op3 name=option3 style="height:40px;width:400px">
-								投票選項4:<input type=text id=title_op4 name=option4 style="height:40px;width:400px"><br />
-								<input type=button id=send value=送出>&emsp;&emsp;<input type=reset value=清除>
-						</div>
-					</form>
-				</section>
-
-				<div id=allvote>
-					<section id="vote1" class="wrapper style1">
-						<div class="inner"><ul class="va"></ul></div>
-					</section>
-				</div>
+		<section id="vote_tite" class="wrapper style1">	
+			<div class="inner" id=vote_add align=center>
+				<h2><input type=button id=add value="Add" style="height:60px;width:400px "></h2>
 			</div>
+			<form id=vote>	
+				<div class="inner" align=center>
+					投票主題:	<input type=text id=title_na name=title_na style="height:40px;width:400px"><br />
+					投票選項1:<input type=text id=title_op1 name=option1 style="height:40px;width:400px">
+					投票選項2:<input type=text id=title_op2 name=option2 style="height:40px;width:400px">
+					投票選項3:<input type=text id=title_op3 name=option3 style="height:40px;width:400px">
+					投票選項4:<input type=text id=title_op4 name=option4 style="height:40px;width:400px"><br />
+					<input type=button id=send value=送出>&emsp;&emsp;<input type=reset value=清除>
+				</div>
+			</form>
+		</section>
+
+		<div id=allvote>
+			<section id="vote1" class="wrapper style1">
+				<div class="inner"><ul class="va"></ul></div>
+			</section>
+			</div>
+		</div>
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/jquery.cookie.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/voting.js"></script>
-			<script src="assets/js/lib.js"></script>
-			<script type="text/javascript">
-				$(document).ready(function(){
-					  var meet_name=$.cookie("MeetName");
-					  var sent_id=$.cookie("SentId");
-					  var slide_link=$.cookie("SlideLink");
-					  var invite_id=$.cookie("InviteId");
-					  var slide_key=$.cookie("SlideKey");
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/jquery.cookie.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="assets/js/voting.js"></script>
+		<script src="assets/js/lib.js"></script>
+		<script type="text/javascript">
+			$(document).ready(function(){
+				var meet_name=$.cookie("MeetName");
+				var sent_id=$.cookie("SentId");
+				var slide_link=$.cookie("SlideLink");
+				var invite_id=$.cookie("InviteId");
+				var slide_key=$.cookie("SlideKey");
 
-					  console.log(meet_name);
-					  console.log(sent_id);
-					  console.log(slide_link);
-					  console.log(invite_id);
-					  console.log(slide_key);
+				console.log(meet_name);
+				console.log(sent_id);
+				console.log(slide_link);
+				console.log(invite_id);
+				console.log(slide_key);
 
-					  $(WebId).text(invite_id);
-				  });
-			</script>
+				$(WebId).text(invite_id);
+			});
+		</script>
 	</body>
 </html>
