--- a/web/testmessage.html
+++ b/web/testmessage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+		<meta charset="utf-8" />
 		<script>
 			if ("Notification" in window)
 			{
@@ -8,18 +9,14 @@
 				ask.then(permission => {
 					if(permission == "granted")
 					{
-						let msg = new Notification("推播主旨", {
-							body: "推播測試",
-							icon: "http://180.176.8.137:8080/neit_official/Content/images/1.png"
-						});
-						msg.addEventListener("click", event=> {
-							alert("點擊接受");
+						let msg = new Notification("name", {
+							body: "test_j[0].say",
+							icon: href="images/logo.jpg"
 						});
 					}
 				});
 			}
-		</script>
+  		</script>
     </head>
-	<body
-    </body>
+	<body></body>
 </html>
