--- a/web/testtabs.html
+++ b/web/testtabs.html
@@ -59,7 +59,7 @@
       <button class="tablinks" onclick="openCity(event, 'three')"><b>佳句</b></button>
       <button class="tablinks" onclick="openCity(event, 'four')"><b>公式</b></button>
     </div>
-    <div id="one" class="tabcontent"><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3><br /><h3>功能1</h3></div>
+    <div id="one" class="tabcontent"><h6 style="position: relative;top:30px;">22:30</h6><h3>功能1</h3><h6 style="position: relative;top:30px;">22:30</h6><h3>功能1</h3></div>
     <div id="two" class="tabcontent"><h3>功能2</h3></div>
     <div id="three" class="tabcontent"><h3>功能3</h3></div>
     <div id="four" class="tabcontent"><h3>功能4</h3></div>
